# excel-converter

./: .gitattributes  .gitignore  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 084041f36aa3_workbooks_and_sheets.py  5a5a1d240f06_bank_accounts_and_statement_lines.py  608693301f76_auth_credentials_and_refresh_tokens.py  663adffe2cb6_fixed_assets.py  7e313d86064e_audit_log_seq_column.py  8c7500ec4f57_employees_and_payslips.py  a653cb20b5c9_initial_foundational_tables.py  a9cce13a14bc_vat_code_on_journal_lines.py  b3617c64ec43_vat_return_submissions.py  d60cb5aa4060_hmrc_mtd_tokens_and_submission_state.py  e4f26272f1de_journals_and_journal_lines.py  ec1fe5ad0db8_bank_reconciliation_marks.py  ef1cee08ba88_devices_and_allocation_counters.py  f1227cec12db_company_memberships.py  f2bb04ef433c_add_user_mfa_enabled.py
apps/backend/src/ledgerline_backend/: __init__.py  app.py  config.py  dependencies.py  logging.py
apps/backend/src/ledgerline_backend/api/: assets.py  auth.py  cashbook.py  coa.py  companies.py  devices.py  hmrc.py  journals.py  membership_deps.py  meta.py  payroll.py  periods.py  statements.py  workbooks.py
apps/backend/src/ledgerline_backend/db/: __init__.py  base.py  ids.py  session.py
apps/backend/src/ledgerline_backend/models/: __init__.py  allocation.py  audit.py  bank.py  company.py  credential.py  device.py  fixed_asset.py  journal.py  membership.py  organisation.py  payroll.py  refresh_token.py  sync.py  user.py  vat_submission.py  workbook.py
apps/backend/src/ledgerline_backend/security/: __init__.py  auth_service.py  device_service.py  passwords.py  rbac.py  (+2 more)
apps/backend/tests/: conftest.py  helpers.py  test_assets_api.py  test_auth_api.py  test_cashbook_api.py  test_coa_api.py  test_companies_api.py  test_config.py  test_devices_api.py  test_hmrc_mtd_api.py  test_journal_corrections_api.py  test_journals_api.py  test_members_api.py  test_meta.py  test_payroll_api.py  test_periods_api.py  test_reconciliation_api.py  test_reconciliation_suggestions.py  test_statements_api.py  test_vat_api.py  test_vat_submission_api.py  test_workbooks_api.py
apps/backend/tests/db/: conftest.py  test_device_concurrency.py  test_ids.py  test_migrations.py  test_models.py  test_postgres.py  test_session.py  test_types.py
apps/backend/tests/security/: test_auth_service.py  test_device_service.py  test_passwords.py  test_rate_limit.py  test_tokens.py
apps/backend/tests/services/: test_audit.py  test_cashbook_service.py  test_coa_service.py  test_company_service.py  test_member_management.py  test_posting_service.py  test_reconciliation_service.py  test_statement_extraction.py  test_workbook_service.py
engine/: README.md  pyproject.toml
engine/src/ledgerline_engine/: __init__.py  account.py  api.py  depreciation.py  ledger.py  money.py  payroll.py  period.py  posting.py  reports.py  vat.py
engine/tests/: test_account.py  test_api.py  test_depreciation.py  test_golden_vectors.py  test_ledger.py  test_money.py  test_payroll.py  test_period.py  test_posting.py  test_reports.py  test_vat.py
engine/vectors/: 001_simple_sale.json  002_sale_with_vat.json  003_purchase_and_payment.json  004_fx_purchase.json  005_full_period_pnl_and_bs.json  README.md
(+92 files in other folders)
