[project]
name = "ledgerline-engine"
version = "0.0.0"
description = "Ledgerline accounting engine — the canonical double-entry core, run on both server and desktop"
requires-python = ">=3.12"
# Intentionally dependency-free: the engine is pure domain logic so it can run
# unchanged in the FastAPI backend and the Electron Python sidecar.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "hypothesis>=6.112,<7.0",
    "mypy>=1.11,<2.0",
    "ruff>=0.6,<0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=ledgerline_engine --cov-report=term-missing --cov-fail-under=95"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["ledgerline_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN", "S", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "E501"]
