[project]
name = "ledgerline-backend"
version = "0.0.0"
description = "Ledgerline backend — FastAPI service (system of record, sync gateway, compliance)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "structlog>=24.4,<25.0",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "argon2-cffi>=23.1,<24.0",
    "pyjwt>=2.9,<3.0",
    "email-validator>=2.2,<3.0",
    # NOTE: the backend also requires `ledgerline-engine`, the canonical
    # accounting engine, installed editable from the monorepo so the backend
    # uses the SAME engine as the desktop sidecar (one source of truth for the
    # numbers). It is a sibling path dependency, installed separately:
    #     pip install -e ../../engine
    # It is intentionally not listed here as a PyPI requirement.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<0.28",
    "mypy>=1.11,<2.0",
    "ruff>=0.6,<0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=ledgerline_backend --cov-report=term-missing --cov-fail-under=90"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["ledgerline_backend"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN", "S", "RUF"]
# ANN101/ANN102 (annotating self/cls) are deprecated and add no value.
ignore = ["ANN101", "ANN102"]
# S101 (assert) is acceptable in tests; handled via per-file ignores below.

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use asserts, fixture passwords/secrets, and long lines.
"tests/**" = ["S101", "S105", "S106", "S107", "ANN", "E501"]
# Alembic migrations are largely autogenerated; long DDL lines are conventional.
"alembic/versions/**" = ["E501"]
"alembic/env.py" = ["E402"]
